syntax = "proto3";

option go_package = "./pb/generated;pb";
import "google/protobuf/empty.proto";

service AdminAccountService {
    //Login
    rpc AdminLoginViaPassword(AdminLoginViaPasswordRequest) returns (AdminLoginResponse);    //unimplemented

    //profile
    rpc AdminGetProfile(AdminGetProfileRequest) returns (AdminGetProfileResponse);    //unimplemented
    rpc AdminUpdatePasswordUsingOldPw(AdminUpdatePasswordUsingOldPwRequest) returns (google.protobuf.Empty);    //unimplemented
}
message AdminUpdatePasswordUsingOldPwRequest {
    int32 adminId = 1;
    string oldPassword = 2;
    string newPassword = 3;
}

message AdminGetProfileRequest {
    int32 adminId = 1;
}

message AdminGetProfileResponse {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string address = 4;
    string pincode = 5;
    string phoneNumber = 6;
}

message AdminLoginViaPasswordRequest {
    string username = 1;
    string password = 2;
}

message AdminLoginResponse {
    string message = 1;
    string token = 2;
    LoggingAdminDetails adminDetails = 3;
}

message LoggingAdminDetails {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
    string phoneNumber = 4;
}